sort author by genre